--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "author": "Markus Korhonen",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "jest": "^29.4.1",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   },
   "dependencies": {
     "ejs": "^3.1.9",
