--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "fetch": "^1.1.0",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3",
     "node": "^19.8.1"
   }
 }
