--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "web": "node ./index.js",
     "start": "node index.js",
     "dev": "concurrently --kill-others \"npm run dev:server\" \"npx tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch\" ",
     "dev:server": "nodemon index.js"
